feat(database): setup PostgreSQL with Prisma and seed data

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,1 +1,9 @@
-NEXT_PUBLIC_API_URL=https://pokeapi.co/api/v2/
+PORT=
+DB_USER=
+DB_HOST=
+DB_NAME=
+DB_PASSWORD=
+DB_PORT=
+
+# Prisma Database URL
+DATABASE_URL=
