--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --webpack",
     "dev-open": "start http://localhost:3000 && pnpm dev",
     "build": "next build",
     "build-analyze": "cross-env ANALYZE=true pnpm build",
@@ -20,7 +20,11 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "stories-check": "echo 'storycap is incompatible with Storybook 10. Use Chromatic or similar tool for visual regression testing.'",
-    "feature:remove": "node ./helpers/featureSelect.ts"
+    "feature:remove": "node ./helpers/featureSelect.ts",
+    "db:seed": "tsx prisma/seed.ts"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@emotion/cache": "11.14.0",
@@ -28,14 +32,18 @@
     "@emotion/styled": "11.14.0",
     "@mui/icons-material": "7.3.6",
     "@mui/material": "7.3.6",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "axios": "1.7.9",
     "clsx": "2.1.1",
     "colorette": "2.0.20",
     "mobx": "6.13.5",
     "mobx-react-lite": "4.1.1",
     "next": "16.1.0",
+    "pg": "^8.17.1",
     "pixelmatch": "5.3.0",
     "pngjs": "7.0.0",
+    "prisma": "^7.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hot-toast": "2.4.1",
@@ -55,10 +63,12 @@
     "@storybook/react": "10.1.11",
     "@svgr/webpack": "8.1.0",
     "@total-typescript/ts-reset": "0.5.1",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19.2.8",
     "@typescript-eslint/eslint-plugin": "8.19.0",
     "@typescript-eslint/parser": "8.19.0",
     "cross-env": "7.0.3",
+    "dotenv": "^17.2.3",
     "eslint": "9.17.0",
     "eslint-config-next": "16.1.0",
     "eslint-import-resolver-typescript": "3.7.0",
@@ -76,6 +86,7 @@
     "rimraf": "6.0.1",
     "sass-loader": "14.2.1",
     "storybook": "10.1.11",
+    "tsx": "^4.21.0",
     "webpack-dev-server": "5.2.0"
   }
 }
