--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 # next.js
 /.next/
 /out/
+.swc
 
 # storybook
 /storybook-static
@@ -23,12 +24,19 @@
 
 # production
 /build
+/dist
+
+# test
+/coverage
 
 # misc
 .DS_Store
 
 # debug
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+debug-storybook.log
 yarn-debug.log*
 yarn-error.log*
 
@@ -44,3 +52,4 @@ full-stack-js-zadatak.pdf
 
 /internal
 .vercel
+.claude
