--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-hot-toast": "2.4.1",
     "sass": "1.83.1",
     "typescript": "5.7.3",
-    "webpack": "5.97.1"
+    "webpack": "5.97.1",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.2.0",
