--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-hot-toast": "2.4.1",
     "sass": "1.83.1",
     "typescript": "5.7.3",
+    "vanilla-cookieconsent": "github:Enterwell/cookieconsent",
     "webpack": "5.97.1",
     "zod": "^4.3.5"
   },
