--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,3 @@
-PORT=
 DB_USER=
 DB_HOST=
 DB_NAME=
@@ -7,3 +6,6 @@ DB_PORT=
 
 # Prisma Database URL
 DATABASE_URL=
+
+# CDN Configuration
+NEXT_PUBLIC_CDN_BASE_URL=
